# diddi-platforms

./: MANIFEST.in  README.md  default.pyxres  install.py  main.py  noxfile.py  requirements-test.txt  requirements.txt  setup.cfg  uninstall.py
.github/workflows/: ci.yml
diddi_platforms/: __init__.py  mechanics.py  objs.py  startup.py  utils.py  variables.py
diddiplatforms/: README.md
diddiplatforms_pkg/: __init__.py  creator_tools.py  find_path.py  manage_ext.py  runner.py  setup.cfg  utils.py
diddiplatforms_pkg/diddiplatforms_pkg/: find_path.py  manage_ext.py  pyxel_interface.py
diddiplatforms_pkg/diddiplatforms_pkg/templates/: map_template.pyxres
diddiplatforms_pkg/templates/: __init__.py  map_template.pyxres
docs/: conf.py  credits.rst  getstarted.rst  index.rst  requirements.txt  universe.rst
docs/creator/: edit_resources.pyxres  index.rst
