[metadata]
name = diddi_platforms
version = 1.0.0dev0
author = Diego Ramirez
author_email = dr01191115@gmail.com
description = The Python package to build and extend the Diddi Platforms game.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://diddiplatforms.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: Software Development
license = MIT License
license_file = LICENSE
keywords = diddiplatforms python
project_urls =
    Documentation = http://diddiparser2.readthedocs.io
    Tracker = http://github.com/DiddiLeija/diddiparser2/issues
    Source = http://github.com/DiddiLeija/diddiparser2

[options]
packages =
    diddiplatforms_pkg
    diddiplatforms_pkg.templates
install_requires =
    pyxel>=1.6.0
python_requires = >=3.7
zip_safe = False

[flake8]
exclude = .nox/
max-line-length = 127
extend-ignore = E203

[isort]
profile = black
